[Luisa][43] Replaces Animal/JpaAnimal and LinkPicture/JpaPrimaryLinkPicture mappings with MapStruct